--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^6.1.1"
@@ -28,6 +29,7 @@
     "@types/node": "22.13.4",
     "@types/react": "19.0.10",
     "autoprefixer": "^10.4.20",
+    "babel-plugin-styled-components": "^2.1.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "5.7.3"
